# TSDK

./: .gitignore  Api.json  LICENSE  README.md  TSDK-0.1-py3-none-any.whl  TSDK-0.2-py3-none-any.whl  TSDK-0.3-py3-none-any.whl  __init__.py  config.py  mTop.py  main.py  pyproject.toml  setup.py  tbk.json  函数加载.py  找到的接口.md  淘宝爬虫.py  配置加载.py
TSDK/: __init__.py  main.py
TSDK.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
TSDK/api/: base.py
TSDK/api/douyin/: h5.py  test.py
TSDK/api/eleme/: h5.py  script.js
TSDK/api/taobao/: h5.py
TSDK/api/types/: douyin.py  taobao.py
TSDK/tests/: test_comment.py
TfuncModule/: SDK基类.py  淘宝APPapi.py  淘宝H5API.py  淘宝通用API.py
api/: base.py
api/douyin/: h5.py  readme.md
api/eleme/: h5.py
api/meituan/: h5.py
api/taobao/: h5.py  open.py
api/types/: douyin.py  eleme.py  taobao.py
eggtest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
taobao/: SDK基类.py  __init__.py  京东.py  支付宝.py  支付宝开放平台.py  淘宝APP.py  淘宝H5.py  淘宝开放平台.py  淘宝通用.py
util/: config.py  error.py  tools.py
函数对象包/: SDK基类.py  淘宝APPapi.py  淘宝H5API.py  淘宝开放平台API.py  淘宝通用API.py
淘宝开放平台配置/: 手机淘宝API.json  淘宝卡券平台.json  淘宝客API.json
淘宝开放平台配置文件/: 会员中心API.json  商户API.json  手淘分享.json  淘宝API文档解析.py  淘宝搜索API.json
